Wed Jun  4 20:18:36 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in, Makefile.am: autoconf magic for gthread.

Sat May 31 19:54:53 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): get number of processors
	for windows systems.

Sat May 31 19:48:18 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): experimental code for 
	determining the number of processors on *nix boxes.

Sat May 31 13:51:57 2003  Joern Thyssen  <jth@gnubg.org>

	more autoconf magic.

	* Makefile.am: conditional for procunits.
	* threadglobals.c: new file.
	* procunits.[ch]: move threadglobal stuff into threadglobals.[ch]

Sat May 31 13:30:36 2003  Joern Thyssen  <jth@gnubg.org>

	Add autoconf magic for multi-processor code.

	* configure.in: look for pthread.
	* gnubg.c, eval.c, procunits.c, rollout.c: PROCESSOR_UNITS now
	defined in config.h

Sat May 31 12:55:28 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (Thrad_RemoteProcessingUnit): remove call to htons, since
	inAddress is already in network byte order.
	* procunits.c (RPU_SetSocketOptions): no SO_RCVTIME0 and SO_SNDTIME0
	on linux.

Sat May 31 12:24:49 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c: pacify fussy compilers.
	* procunits.[ch]: pacify fussy compilers.

Thu May 29 21:10:47 2003  Joern Thyssen  <jth@gnubg.org>

	Implement Sho Sengoku Equity Temperature Map
	(suggested by Yoshito Takeuchi)

	* gtktempmap.c, Makefile.am: new file
	* gnubg.c: new command "show temperaturemap"
	* show.c (CommandShowTemperatureMap): new function.
	* gtkboard.c (DrawDie): declare function extern.
	* gtkgame.c: new menu entry.

Thu May 29 13:28:46 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): bug fixes + resignations.
	* drawboard.c (ParseFIBSBoard): let negative values of "doubled"
	represent resignations.
	(contributed by Rod Roark)

Thu May 29 13:11:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputl, outputerrv): add fflush.
