@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: rollout.c,v 1.101.2.4 2003/06/06 14:57:54 grob Exp $
+ * $Id: rollout.c,v 1.101.2.5 2003/06/07 15:27:31 grob Exp $
  */
 
 #include "config.h"
@@ -34,6 +34,9 @@
 #include <string.h>
 #include <assert.h>
 #include <time.h>
+#if PROCESSING_UNITS
+#include <signal.h>
+#endif
 
 #include "backgammon.h"
 #include "dice.h"
